tests/fixtures/invalid/pow_int_str_bool.py
# Cannot call pow() with Int, Str, Bool
x = pow(1, "hello", True)
